kube-bootstrap/dashboard/service.yml
apiVersion: v1
kind: Service
metadata:
  name: dashboard-nodeport
  namespace: kubernetes-dashboard
spec:
  type: NodePort
  ports:
    - name: https-in
      port: 443
      targetPort: 8443
      nodePort: 30000
  selector:
    app: kubernetes-dashboard-kong
